# Santander_2024-Fundamentos_de_IA_para_Devs

./: .gitignore  README.md  pyproject.toml
Criando Artigos Tecnicos com IA/: README.MD
Criando Artigos Tecnicos com IA/scripts/: exampleDB.sql  queries_examples.sql
Criando um Ebook com ChatGPT & MidJourney/: README.md
Criando um Ebook com ChatGPT & MidJourney/data/: exampleDB.sql
Criando um Ebook com ChatGPT & MidJourney/output/modelo/: ebook - SQL Mastery.pptx
Criando um Podcast com IAs Generativas/: README.MD
Desafios de Código - Simulando Desafios com IAs Generativas/: README.md
